--- a/curriculo/assets/style/index.scss
+++ b/curriculo/assets/style/index.scss
@@ -63,9 +63,11 @@ body {
 			margin-bottom: 10px;
 		}
 		p, a {
-			color: $cor-texto;
 			font-size: .95em;
 			line-height: 22px;
+		}
+		a {
+			color: $cor-texto;
 		}
 		li {
 			font-size: .95em;
@@ -122,7 +124,7 @@ aside {
 	background: $cor-principal;
 	overflow: hidden;
 	& * {
-		color: white !important;
+		color: white;
 	}
 	#foto {
 		margin-top: -25px;
